--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,11 @@
 
     <header>
         <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg navbar-scrolled">
-                <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-scrolled ">
+                <div class="container-fluid ">
                     <a class="navbar-brand" href="#" style="color: whitesmoke;">PAPA JOE'S</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <button  class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fa-solid fa-bars" style="color: white;"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
@@ -41,7 +41,7 @@
 
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-7 col-sm-12 text-white">
+                <div class="col-md-7 col-sm-12 text-white" >
                     <h1 class="jtronH">Welcome to <span>PAPA JOE'S</span></h1>
                     <p class="jtronP">Making and delivering great food for more than 5 years!</p>
                     <a href="#menu"><button class="btn btn-light px-5 py-2">Our Menu</button></a>
