--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PAPA JOE'S Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/e6705cd2f4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href=".//css/style.css">
@@ -17,9 +17,9 @@
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg navbar-scrolled ">
-                <div class="container-fluid ">
-                    <a class="navbar-brand" href="#" style="color: whitesmoke;">PAPA JOE'S</a>
-                    <button  class="navbar-toggler"  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="logo container-fluid ">
+                    <a class="logo navbar-brand" href="#">PAPA JOE'S</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa-solid fa-bars" style="color: white;"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -41,7 +41,7 @@
 
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-7 col-sm-12 text-white" >
+                <div class="col-md-7 col-sm-12 text-white">
                     <h1 class="jtronH">Welcome to <span>PAPA JOE'S</span></h1>
                     <p class="jtronP">Making and delivering great food for more than 5 years!</p>
                     <a href="#menu"><button class="btn btn-light px-5 py-2">Our Menu</button></a>
@@ -55,8 +55,73 @@
     </header>
 
     <main>
+        <div class="row justify-content-center " style="margin-top: 10px">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-6 mb-3">
+                <div class="card shadow">
+                    <img src="../../view/admin/imgBarang/62a0ab0f05664.jpg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">
+                            <h4 class="fontHp"></h4>
+                        </div>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    </div>
+
+                    <div class="card-footer text-center ">
+                        <a type="button" class="btn btn-success buttonSize g-3" href="">Beli</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-6 mb-3">
+                <div class="card shadow">
+                    <img src="../../view/admin/imgBarang/62a0ab0f05664.jpg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">
+                            <h4 class="fontHp"></h4>
+                        </div>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    </div>
+
+                    <div class="card-footer text-center ">
+                        <a type="button" class="btn btn-success buttonSize g-3" href="">Beli</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-6 mb-3">
+                <div class="card shadow">
+                    <img src="../../view/admin/imgBarang/62a0ab0f05664.jpg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">
+                            <h4 class="fontHp"></h4>
+                        </div>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    </div>
+
+                    <div class="card-footer text-center ">
+                        <a type="button" class="btn btn-success buttonSize g-3" href="">Beli</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-6 mb-3">
+                <div class="card shadow">
+                    <img src="../../view/admin/imgBarang/62a0ab0f05664.jpg" class="card-img-top">
+                    <div class="card-body text-center">
+                        <div class="card-title">
+                            <h4 class="fontHp"></h4>
+                        </div>
+                        <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    </div>
+
+                    <div class="card-footer text-center ">
+                        <a type="button" class="btn btn-success buttonSize g-3" href="">Beli</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
 
     </main>
+
 
     <footer>
         <div class="container-fluid p-0 col-sm-12">
